--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -4,10 +4,8 @@
     </h1>
 </nav>
 
-<p></p>
-
 <div class="container homePage">
-    <img src="../assets/HomePage.jpg" width="700px">
+    <img src="../assets/animal-pairs.jpg" width="700px">
     <br>
     
 
