dependency to send emails is functional

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -85,6 +85,12 @@ h1 {
   text-align: center;
 }
 
+/* this section of css corresponds to signup html */
+
+#sidekick-image-p {
+  color: white;
+}
+
 /* HIDE RADIO */
 [type=radio] { 
   position: absolute;
@@ -114,7 +120,7 @@ h1 {
 }
 
 .addEmailForm {
-  width: 20px;
+  width: 30px;
   color: white;
   margin-left: 85%;
 }
