--- a/views/partials/graph.handlebars
+++ b/views/partials/graph.handlebars
@@ -40,7 +40,7 @@
 
 <script src="members.js"></script>
 
-<script src="scale.js"></script> --}}
+<script src="scale.js"></script>
 
 
 
@@ -122,4 +122,3 @@ $("#chart").linechart({
 </script>
 
 
-<!-- Modal -->
