--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -18,7 +18,7 @@
                 </div>
 
                 {{!-- Choose Character/Avatar --}}
-                <p>Choose a Sidekick:</p>
+                <p id = "sidekick-image-p">Choose a Sidekick:</p>
                 <div class="row">
                     <div class="col-md-6 choose-cat form-check">
                         <label>
