--- a/views/partials/invite.handlebars
+++ b/views/partials/invite.handlebars
@@ -8,12 +8,12 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class = "form-group">
+        <div class = "form-group email-forms">
             <label for = "inviteEmail" id = "emailHelp">Add an email to send an invite to!</label>
             <input type = "email" class="form-control inviteEmails" id="InputEmail1" aria-describedby="#emailHelp">
         </div>
       </div>
-      <button type = "button" class = "btn addEmailForm far fa-plus-square"></button>
+      <button type = "button" class = "btn addEmailForm far fa-plus-square justify-content-center"></button>
       <div class="modal-footer">
           <button type="button" class="btn btn-primary btn-save" id = "saveBtn">Send!</button>
       </div>
