--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,14 +1,20 @@
+<div class="container-fluid px-0">
 <nav class="navbar navbar-expand-lg">
+    <div class="row d-flex justify-content-center no-gutters">
+    <div class="col-md">
     <h1 class="header">
         Self-Care Sidekick
     </h1>
-    <div id="navbarSupportedContent">
+    </div>
+    <div class="col-md" id="navbarSupportedContent">
         <a class="navbar-brand" href="/logout">
             <button class="btn">Logout</button>
         </a>
     </div>
+    </div>
 
 </nav>
+</div>
 
 <p></p>
 
