--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -91,7 +91,8 @@
     crossorigin="anonymous"></script>
 <script src="/js/members.js"></script>
 
-<script src="/js/modal.js"
+<script src="/js/modal.js"></script>
+<script src="/js/add-activity.js"></script>
 {{!-- <script src="/js/homepage.js"></script> --}}
 
 <script>
