--- a/views/partials/activity-block.handlebars
+++ b/views/partials/activity-block.handlebars
@@ -18,6 +18,7 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
 <script src="/js/members.js"></script>
+<script src="/js/add-activity.js"></script>
 <script>
     
     function getUserforActivity() {
