--- a/views/partials/add-activity-modal.handlebars
+++ b/views/partials/add-activity-modal.handlebars
@@ -8,7 +8,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form>
+                <form id="activity-adder">
                     <input type="text" class="form-control" id="addActivity" placeholder="Activity Name">
                     <br>
                     <label for="FormSelect1">Select Category</label>
@@ -34,7 +34,7 @@
                     </div>
                 </form>
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer add-activity-footer">
                 <button type="submit" class="btn btn-default" id="savenewtask">Save New Task</button>
             </div>
         </div>
