Nodemailer works, need to get image link to work, added some middleware

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -55,10 +55,12 @@
 	            <button data-updatetask="{{id}}" data-category="{{category}}" class="update-activity">Update</button>
                 <button data-deletetask="{{id}}" class="delete-activity">Delete</button>
 
+                high
                     <ul>
-                        {{#each Activities}}
+                        {{#each party}}
+                            hi
                             {{!-- {{>activity-block}} --}}
-                            {{this.activityName}}
+                            {{name}}
                         {{/each}}
                         
                     </ul>
