--- a/views/partials/invite.handlebars
+++ b/views/partials/invite.handlebars
@@ -13,7 +13,7 @@
             <input type = "email" class="form-control inviteEmails" id="InputEmail1" aria-describedby="#emailHelp">
         </div>
       </div>
-      <button type = "button" class = "btn addEmailForm far fa-plus-square justify-content-center"></button>
+      {{!-- <button type = "button" class = "btn addEmailForm far fa-plus-square justify-content-center"></button> --}}
       <div class="modal-footer">
           <button type="button" class="btn btn-primary btn-save" id = "saveBtn">Send!</button>
       </div>
