--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,4 +1,9 @@
-
+ <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+		<script src="/js/members.js"></script>
+        <script src="/js/scale.js"></script>
 <nav class="navbar">
     <h1 class="header">
         Self-Care Sidekick
@@ -92,14 +97,10 @@
     </div>
 </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-		<script src="/js/members.js"></script>
+   
 {{!-- <script src="/js/homepage.js"></script> --}}
 
-<script>
+{{!-- <script>
     //$(document).ready(function () {
         //const membersAvatar = require("/js/members.js");
         //showMemberAvatar();
@@ -131,5 +132,5 @@
        // }
 
     //})
-</script>
+</script> --}}
 
