fixing images and progress again lol

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -51,7 +51,7 @@
             <div class="col-md-8 tasks-block">
                 Test Task
 
-                <button class="complete" data-id="{{id}}" data-category="{{category}}" data-value="50">Complete</button>
+                <button class="complete" data-id="{{sidekick.id}}" data-category="{{category}}" data-value="50">Complete</button>
 	            <button data-updatetask="{{id}}" data-category="{{category}}" class="update-activity">Update</button>
                 <button data-deletetask="{{id}}" class="delete-activity">Delete</button>
 
