--- a/views/partials/activity-block.handlebars
+++ b/views/partials/activity-block.handlebars
@@ -1,21 +1,12 @@
 <li>
-    {{#if category=personal-grooming}}<img src="/assets/Shampoo.png" alt="grooming" width="50px">{{/if}}
-    {{#if category=food}}<img src="/assets/Bowl.png" alt="food" width="100px">{{/if}}
-    {{#if category=exercise}}<img src="/assets/Ball.png" alt="exercise" width="50px">{{/if}}
-    {{#if category=cleaning}}<img src="/assets/Shovel.png" alt="cleaning" width="50px">{{/if}}
-    <div class="task-listed">{{activityName}}</div>
-    <button class="complete" data-id="{{id}}" data-category="{{category}}">Complete</button>
+    {{!-- {{#if this.dataValues.category="personal-grooming"}}<img src="/assets/Shampoo.png" alt="grooming" width="50px">{{/if}} --}}
+    {{!-- {{#if category=food}}<img src="/assets/Bowl.png" alt="food" width="100px">{{/if}} --}}
+    {{!-- {{#if category=exercise}}<img src="/assets/Ball.png" alt="exercise" width="50px">{{/if}} --}}
+    {{!-- {{#if category=cleaning}}<img src="/assets/Shovel.png" alt="cleaning" width="50px">{{/if}} --}}
+    <div class="task-listed">
+        {{this.dataValues.activityName}}
+        <button class="complete" data-value="{{this.dataValues.priority}}">Complete</button>
+    </div>
     {{!-- <button data-updatetask="{{id}}" data-category="{{category}}" class="update-activity">Update</button> --}}
-    <button data-deletetask="{{id}}" class="delete-activity">Delete</button>
+    {{!-- <button data-deletetask="{{id}}" class="delete-activity">Delete</button> --}}
 </li>
-
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
-<script src="/js/members.js"></script>
-<script src="/js/add-activity.js"></script>
