--- a/views/partials/activity-block.handlebars
+++ b/views/partials/activity-block.handlebars
@@ -5,7 +5,7 @@
     {{!-- {{#if category=cleaning}}<img src="/assets/Shovel.png" alt="cleaning" width="50px">{{/if}} --}}
     <div class="task-listed">
         {{this.dataValues.activityName}}
-        <button class="complete" data-value="{{this.dataValues.priority}}">Complete</button>
+        <button class="complete btn-task" data-id="{{this.dataValues.id}}" data-value="{{this.dataValues.priority}}">Complete</button>
     </div>
     {{!-- <button data-updatetask="{{id}}" data-category="{{category}}" class="update-activity">Update</button> --}}
     {{!-- <button data-deletetask="{{id}}" class="delete-activity">Delete</button> --}}
