created graph.js, api-routes, and handlebars

--- a/views/partials/sleep-wake.handlebars
+++ b/views/partials/sleep-wake.handlebars
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"data-id="{{id}}" data-newsleep="{{sleep}}" >
+<button type="button" class="btn btn-primary graph" data-toggle="modal" data-target="#exampleModal"data-id="{{id}}" data-newsleep="{{sleep}}" >
   Start New Day?
 </button>
 
