--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,17 +1,7 @@
-<<<<<<< HEAD
- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-		<script src="/js/members.js"></script>
-        <script src="/js/scale.js"></script>
-<nav class="navbar">
-=======
 <div class="container-fluid px-0">
 <nav class="navbar navbar-expand-lg">
     <div class="row d-flex justify-content-center no-gutters">
     <div class="col-md">
->>>>>>> master
     <h1 class="header">
         Self-Care Sidekick
     </h1>
@@ -106,7 +96,7 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
 <script src="/js/members.js"></script>
-
+<script src="/js/graph.js"></script>
 <script src="/js/modal.js"></script>
 <script src="/js/add-activity.js"></script>
 {{!-- <script src="/js/homepage.js"></script> --}}
