--- a/views/partials/graph.handlebars
+++ b/views/partials/graph.handlebars
@@ -1,41 +1,8 @@
-   <script>
-window.onload = function () {
+<script src="js/graph.js"></script>
 
-var chart = new CanvasJS.Chart("chartContainer", {
-	animationEnabled: true,
-	theme: "light2",
-	title:{
-		text: "Simple Line Chart"
-	},
-	axisY:{
-		includeZero: false
-	},
-	data: [{        
-		type: "line",
-      	indexLabelFontSize: 16,
-		dataPoints: [
-			{ y: 450 },
-			{ y: 414},
-			{ y: 520, indexLabel: "\u2191 highest",markerColor: "red", markerType: "triangle" },
-			{ y: 460 },
-			{ y: 450 },
-			{ y: 500 },
-			{ y: 480 },
-			{ y: 480 },
-			{ y: 410 , indexLabel: "\u2193 lowest",markerColor: "DarkSlateGrey", markerType: "cross" },
-			{ y: 500 },
-			{ y: 480 },
-			{ y: 510 }
-		]
-	}]
-});
-chart.render();
-
-}
-</script>
    
    
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#graphModal">
+    <button type="button" class="btn btn-primary graphProgress" data-toggle="modal" data-target="#graphModal">
   View your progress
 </button>
 
