--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -40,9 +40,9 @@
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
                         Add Activity
                     </button>
-                    <br>
-                    <button class="btn">See History</button>
-                    <br>
+                    {{!-- <br> --}}
+                    {{!-- <button class="btn">See History</button> --}}
+                    {{!-- <br> --}}
                     {{> sleep-wake sleep=false}}
                 </p>
             </div>
