--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -40,27 +40,18 @@
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
                         Add Activity
                     </button>
-                    {{!-- <br> --}}
-                    {{!-- <button class="btn">See History</button> --}}
-                    {{!-- <br> --}}
-                    {{> sleep-wake sleep=false}}
+
+                    {{> sleep-wake}}
                 </p>
             </div>
 
             {{!-- Div to hold added activities --}}
-            <div class="col-md-8 tasks-block">
-                {{!-- Test Task --}}
-
-                {{!-- <button class="complete" data-id="{{sidekick.id}}" data-category="{{category}}" data-value="50">Complete</button> --}}
-	            {{!-- <button data-updatetask="{{id}}" data-category="{{category}}" class="update-activity">Update</button> --}}
-                {{!-- <button data-deletetask="{{id}}" class="delete-activity">Delete</button> --}}
+            <div class="col-md-6 tasks-block">
 
                     <ul>
                         {{#each activityObject.test}}
                             {{>activity-block}}
                         {{/each}}
- 
-                        
                     </ul>
 
             </div>
@@ -69,6 +60,10 @@
 </div>
 
 <p></p>
+
+
+{{!-- Add Activity Modal --}}
+{{> add-activity-modal}}
 
 <footer class="footer">
 
@@ -81,9 +76,6 @@
     </p>
 
 </footer>
-
-{{!-- Add Activity Modal --}}
-{{> add-activity-modal}}
 
 <script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -99,39 +91,4 @@
 <script src="/js/graph.js"></script>
 <script src="/js/modal.js"></script>
 <script src="/js/add-activity.js"></script>
-{{!-- <script src="/js/homepage.js"></script> --}}
-
-{{!-- <script>
-    //$(document).ready(function () {
-        //const membersAvatar = require("/js/members.js");
-        //showMemberAvatar();
-        //let activities = [];
-        //let category = $("#selectCategory option:selected").text();
-        //let difficulty = $(".form-check-input:checked").val();
-        //const activityname = $("#addActivity");
-
-        //$("#savenewtask").on("click", function () {
-            //const activityData = {
-                //activityName: activityname.val().trim(),
-              //  priority: difficulty,
-              //  category: category
-            //}
-
-            //console.log("********",activityData);
-
-           // createActivity(activityData.activityName, activityData.priority, activityData.category, activityData)
-       // });
-
-        //function createActivity(activityName, priority, category, activityData){
-
-
-            //$.post("/api/activity", function(data){
-            //    alert("success");
-            //}).then(function () {
-            //    console.log("new activity added: " + activityData);
-            //});
-       // }
-
-    //})
-</script> --}}
 
